Part2/homework2_plcsim/plcsim/plcsimParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/takuumi/Projects/StudyANTLR/Part2/homework2_plcsim/plcsim/plcsim.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class plcsimParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		EQUAL=1, AND=2, HAT=3, PLUS=4, MINUS=5, MUL_OR_INDIRECT=6, SLASH=7, GT=8, 
		LT=9, VBAR=10, TILDA=11, COLON=12, ATMARK=13, UNDEFINE=14, DOTINT=15, 
		OLDINDIRECT=16, EOL=17, SEPARATOR=18, LINECOMMENT=19, CONST_DEC_NUMBER=20, 
		CONST_HEX_NUMBER=21, CONST_FLOAT=22, CONST_STRING=23, SUFFIX=24, IDENTIFIER=25;
	public const int
		RULE_input = 0, RULE_oneline = 1, RULE_mnemonic = 2, RULE_instruction = 3, 
		RULE_separator = 4, RULE_linecomment = 5, RULE_operator = 6, RULE_operand = 7, 
		RULE_index = 8, RULE_wordbit = 9, RULE_indirect = 10, RULE_local = 11, 
		RULE_literal = 12, RULE_const_number = 13, RULE_const_string = 14, RULE_const_dec_number = 15, 
		RULE_const_hex_number = 16, RULE_const_float = 17;
	public static readonly string[] ruleNames = {
		"input", "oneline", "mnemonic", "instruction", "separator", "linecomment", 
		"operator", "operand", "index", "wordbit", "indirect", "local", "literal", 
		"const_number", "const_string", "const_dec_number", "const_hex_number", 
		"const_float"
	};

	private static readonly string[] _LiteralNames = {
		null, "'='", "'&'", "'^'", "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'|'", 
		"'~'", "':'", "'@'", "'???'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "EQUAL", "AND", "HAT", "PLUS", "MINUS", "MUL_OR_INDIRECT", "SLASH", 
		"GT", "LT", "VBAR", "TILDA", "COLON", "ATMARK", "UNDEFINE", "DOTINT", 
		"OLDINDIRECT", "EOL", "SEPARATOR", "LINECOMMENT", "CONST_DEC_NUMBER", 
		"CONST_HEX_NUMBER", "CONST_FLOAT", "CONST_STRING", "SUFFIX", "IDENTIFIER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "plcsim.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static plcsimParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public plcsimParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public plcsimParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class InputContext : ParserRuleContext {
		public OnelineContext[] oneline() {
			return GetRuleContexts<OnelineContext>();
		}
		public OnelineContext oneline(int i) {
			return GetRuleContext<OnelineContext>(i);
		}
		public InputContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_input; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IplcsimVisitor<TResult> typedVisitor = visitor as IplcsimVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInput(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InputContext input() {
		InputContext _localctx = new InputContext(Context, State);
		EnterRule(_localctx, 0, RULE_input);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 39;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SEPARATOR) | (1L << LINECOMMENT) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				State = 36; oneline();
				}
				}
				State = 41;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OnelineContext : ParserRuleContext {
		public OnelineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_oneline; } }
	 
		public OnelineContext() { }
		public virtual void CopyFrom(OnelineContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Plcsim_memonicContext : OnelineContext {
		public MnemonicContext mnemonic() {
			return GetRuleContext<MnemonicContext>(0);
		}
		public Plcsim_memonicContext(OnelineContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IplcsimVisitor<TResult> typedVisitor = visitor as IplcsimVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPlcsim_memonic(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Plcsim_linecommentContext : OnelineContext {
		public LinecommentContext linecomment() {
			return GetRuleContext<LinecommentContext>(0);
		}
		public Plcsim_linecommentContext(OnelineContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IplcsimVisitor<TResult> typedVisitor = visitor as IplcsimVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPlcsim_linecomment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OnelineContext oneline() {
		OnelineContext _localctx = new OnelineContext(Context, State);
		EnterRule(_localctx, 2, RULE_oneline);
		try {
			State = 44;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case SEPARATOR:
			case IDENTIFIER:
				_localctx = new Plcsim_memonicContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 42; mnemonic();
				}
				break;
			case LINECOMMENT:
				_localctx = new Plcsim_linecommentContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 43; linecomment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MnemonicContext : ParserRuleContext {
		public MnemonicContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mnemonic; } }
	 
		public MnemonicContext() { }
		public virtual void CopyFrom(MnemonicContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Plcsim_mainContext : MnemonicContext {
		public OperandContext _operand;
		public IList<OperandContext> _ope = new List<OperandContext>();
		public InstructionContext instruction() {
			return GetRuleContext<InstructionContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(plcsimParser.Eof, 0); }
		public SeparatorContext[] separator() {
			return GetRuleContexts<SeparatorContext>();
		}
		public SeparatorContext separator(int i) {
			return GetRuleContext<SeparatorContext>(i);
		}
		public OperandContext[] operand() {
			return GetRuleContexts<OperandContext>();
		}
		public OperandContext operand(int i) {
			return GetRuleContext<OperandContext>(i);
		}
		public ITerminalNode[] EOL() { return GetTokens(plcsimParser.EOL); }
		public ITerminalNode EOL(int i) {
			return GetToken(plcsimParser.EOL, i);
		}
		public Plcsim_mainContext(MnemonicContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IplcsimVisitor<TResult> typedVisitor = visitor as IplcsimVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPlcsim_main(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MnemonicContext mnemonic() {
		MnemonicContext _localctx = new MnemonicContext(Context, State);
		EnterRule(_localctx, 4, RULE_mnemonic);
		int _la;
		try {
			int _alt;
			_localctx = new Plcsim_mainContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 49;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SEPARATOR) {
				{
				{
				State = 46; separator();
				}
				}
				State = 51;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 52; instruction();
			State = 63;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SEPARATOR) {
				{
				{
				State = 53; separator();
				State = 54; ((Plcsim_mainContext)_localctx)._operand = operand(0);
				((Plcsim_mainContext)_localctx)._ope.Add(((Plcsim_mainContext)_localctx)._operand);
				State = 58;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 55; separator();
						}
						} 
					}
					State = 60;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
				}
				}
				}
				State = 65;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 72;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case EOL:
				{
				State = 67;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 66; Match(EOL);
					}
					}
					State = 69;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==EOL );
				}
				break;
			case Eof:
				{
				State = 71; Match(Eof);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstructionContext : ParserRuleContext {
		public IToken inst;
		public IToken suffix;
		public OperatorContext opr;
		public IToken suf;
		public ITerminalNode IDENTIFIER() { return GetToken(plcsimParser.IDENTIFIER, 0); }
		public ITerminalNode SUFFIX() { return GetToken(plcsimParser.SUFFIX, 0); }
		public OperatorContext[] @operator() {
			return GetRuleContexts<OperatorContext>();
		}
		public OperatorContext @operator(int i) {
			return GetRuleContext<OperatorContext>(i);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruction; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IplcsimVisitor<TResult> typedVisitor = visitor as IplcsimVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstruction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstructionContext instruction() {
		InstructionContext _localctx = new InstructionContext(Context, State);
		EnterRule(_localctx, 6, RULE_instruction);
		int _la;
		try {
			State = 87;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 74; _localctx.inst = Match(IDENTIFIER);
				State = 76;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==SUFFIX) {
					{
					State = 75; _localctx.suffix = Match(SUFFIX);
					}
				}

				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 78; _localctx.inst = Match(IDENTIFIER);
				State = 80;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 79; _localctx.opr = @operator();
					}
					}
					State = 82;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQUAL) | (1L << AND) | (1L << HAT) | (1L << PLUS) | (1L << MINUS) | (1L << MUL_OR_INDIRECT) | (1L << SLASH) | (1L << GT) | (1L << LT) | (1L << VBAR) | (1L << TILDA))) != 0) );
				State = 85;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==SUFFIX) {
					{
					State = 84; _localctx.suf = Match(SUFFIX);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SeparatorContext : ParserRuleContext {
		public ITerminalNode[] SEPARATOR() { return GetTokens(plcsimParser.SEPARATOR); }
		public ITerminalNode SEPARATOR(int i) {
			return GetToken(plcsimParser.SEPARATOR, i);
		}
		public SeparatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_separator; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IplcsimVisitor<TResult> typedVisitor = visitor as IplcsimVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSeparator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SeparatorContext separator() {
		SeparatorContext _localctx = new SeparatorContext(Context, State);
		EnterRule(_localctx, 8, RULE_separator);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 89; Match(SEPARATOR);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 92;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,11,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LinecommentContext : ParserRuleContext {
		public ITerminalNode LINECOMMENT() { return GetToken(plcsimParser.LINECOMMENT, 0); }
		public ITerminalNode Eof() { return GetToken(plcsimParser.Eof, 0); }
		public ITerminalNode[] EOL() { return GetTokens(plcsimParser.EOL); }
		public ITerminalNode EOL(int i) {
			return GetToken(plcsimParser.EOL, i);
		}
		public LinecommentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_linecomment; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IplcsimVisitor<TResult> typedVisitor = visitor as IplcsimVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLinecomment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LinecommentContext linecomment() {
		LinecommentContext _localctx = new LinecommentContext(Context, State);
		EnterRule(_localctx, 10, RULE_linecomment);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94; Match(LINECOMMENT);
			State = 101;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case EOL:
				{
				State = 96;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 95; Match(EOL);
					}
					}
					State = 98;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==EOL );
				}
				break;
			case Eof:
				{
				State = 100; Match(Eof);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperatorContext : ParserRuleContext {
		public ITerminalNode EQUAL() { return GetToken(plcsimParser.EQUAL, 0); }
		public ITerminalNode AND() { return GetToken(plcsimParser.AND, 0); }
		public ITerminalNode HAT() { return GetToken(plcsimParser.HAT, 0); }
		public ITerminalNode PLUS() { return GetToken(plcsimParser.PLUS, 0); }
		public ITerminalNode MINUS() { return GetToken(plcsimParser.MINUS, 0); }
		public ITerminalNode MUL_OR_INDIRECT() { return GetToken(plcsimParser.MUL_OR_INDIRECT, 0); }
		public ITerminalNode SLASH() { return GetToken(plcsimParser.SLASH, 0); }
		public ITerminalNode GT() { return GetToken(plcsimParser.GT, 0); }
		public ITerminalNode LT() { return GetToken(plcsimParser.LT, 0); }
		public ITerminalNode VBAR() { return GetToken(plcsimParser.VBAR, 0); }
		public ITerminalNode TILDA() { return GetToken(plcsimParser.TILDA, 0); }
		public OperatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operator; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IplcsimVisitor<TResult> typedVisitor = visitor as IplcsimVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OperatorContext @operator() {
		OperatorContext _localctx = new OperatorContext(Context, State);
		EnterRule(_localctx, 12, RULE_operator);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQUAL) | (1L << AND) | (1L << HAT) | (1L << PLUS) | (1L << MINUS) | (1L << MUL_OR_INDIRECT) | (1L << SLASH) | (1L << GT) | (1L << LT) | (1L << VBAR) | (1L << TILDA))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperandContext : ParserRuleContext {
		public LiteralContext literal() {
			return GetRuleContext<LiteralContext>(0);
		}
		public IndirectContext indirect() {
			return GetRuleContext<IndirectContext>(0);
		}
		public WordbitContext wordbit() {
			return GetRuleContext<WordbitContext>(0);
		}
		public LocalContext local() {
			return GetRuleContext<LocalContext>(0);
		}
		public ITerminalNode IDENTIFIER() { return GetToken(plcsimParser.IDENTIFIER, 0); }
		public OperandContext operand() {
			return GetRuleContext<OperandContext>(0);
		}
		public ITerminalNode COLON() { return GetToken(plcsimParser.COLON, 0); }
		public IndexContext index() {
			return GetRuleContext<IndexContext>(0);
		}
		public OperandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operand; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IplcsimVisitor<TResult> typedVisitor = visitor as IplcsimVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OperandContext operand() {
		return operand(0);
	}

	private OperandContext operand(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		OperandContext _localctx = new OperandContext(Context, _parentState);
		OperandContext _prevctx = _localctx;
		int _startState = 14;
		EnterRecursionRule(_localctx, 14, RULE_operand, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,14,Context) ) {
			case 1:
				{
				State = 106; literal();
				}
				break;
			case 2:
				{
				State = 107; indirect();
				}
				break;
			case 3:
				{
				State = 108; wordbit();
				}
				break;
			case 4:
				{
				State = 109; local();
				}
				break;
			case 5:
				{
				State = 110; Match(IDENTIFIER);
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 118;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,15,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new OperandContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_operand);
					State = 113;
					if (!(Precpred(Context, 5))) throw new FailedPredicateException(this, "Precpred(Context, 5)");
					State = 114; Match(COLON);
					State = 115; index();
					}
					} 
				}
				State = 120;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,15,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class IndexContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(plcsimParser.IDENTIFIER, 0); }
		public Const_numberContext const_number() {
			return GetRuleContext<Const_numberContext>(0);
		}
		public IndexContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_index; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IplcsimVisitor<TResult> typedVisitor = visitor as IplcsimVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIndex(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IndexContext index() {
		IndexContext _localctx = new IndexContext(Context, State);
		EnterRule(_localctx, 16, RULE_index);
		try {
			State = 123;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 121; Match(IDENTIFIER);
				}
				break;
			case DOTINT:
			case CONST_DEC_NUMBER:
			case CONST_HEX_NUMBER:
			case CONST_FLOAT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 122; const_number();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WordbitContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(plcsimParser.IDENTIFIER, 0); }
		public ITerminalNode DOTINT() { return GetToken(plcsimParser.DOTINT, 0); }
		public WordbitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_wordbit; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IplcsimVisitor<TResult> typedVisitor = visitor as IplcsimVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWordbit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WordbitContext wordbit() {
		WordbitContext _localctx = new WordbitContext(Context, State);
		EnterRule(_localctx, 18, RULE_wordbit);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 125; Match(IDENTIFIER);
			State = 126; Match(DOTINT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IndirectContext : ParserRuleContext {
		public ITerminalNode MUL_OR_INDIRECT() { return GetToken(plcsimParser.MUL_OR_INDIRECT, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(plcsimParser.IDENTIFIER, 0); }
		public LocalContext local() {
			return GetRuleContext<LocalContext>(0);
		}
		public ITerminalNode OLDINDIRECT() { return GetToken(plcsimParser.OLDINDIRECT, 0); }
		public ITerminalNode DOTINT() { return GetToken(plcsimParser.DOTINT, 0); }
		public IndirectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_indirect; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IplcsimVisitor<TResult> typedVisitor = visitor as IplcsimVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIndirect(this);
			else return visitor.VisitChildren(this);
		}
	}
